# curiosity

./: .gitmodules  CMakeLists.txt  main.c
inc/: common.h  config.h  execute.h  socket.h  status.h  wifiCtrl.h
src/: execute.c  socket.c  status.c  wifiCtrl.c
